@@ -8,7 +8,7 @@
 #define STATIC
 #endif
 
-STATIC int chmod_files (const char *mode, uid_t user, gid_t group, char *filename, GSList *filelist);
+STATIC int chmod_files (const char *mode, uid_t user, gid_t group, char *filename, GSList *filelist, GSList *constraints);
 STATIC void chmod_set_fstab(const char *fstab);
 
 #endif /* _CHMOD_H */
